--- a/themes/test.yaml
+++ b/themes/test.yaml
@@ -26,6 +26,7 @@ test:
   light-divider-opacity: "0"
   dark-secondary-opacity: "1"
   medium-grey-color: "#202020"
+  ha-card-border-radius: "15px"
 
   shadow-elevation-16dp_-_box-shadow: "0px 0px 0px 0px hsl(var(--huesat) 25%)"
   shadow-elevation-2dp_-_box-shadow: "0px 0px 0px 0px hsl(var(--huesat) 10%)"
